# azure-cosmos-db-mongodb-rust-getting-started

./: Cargo.toml  README.md
src/: db.rs  main.rs
src/models/: task.rs
