[package]
name = "cosmos-rust"
version = "0.1.0"
authors = ["Gurpreet Singh <gdhuper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.1"
bson = "0.14.0"
chrono = "0.4"
serde = { version = "~1.0.82", features = ["derive"] }
